<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">烁米团购</string>
    <string name="dlg_btn_ok">确定</string>
    <string name="dlg_btn_cancel">取消</string>
    <string name="app_error">错误</string>
    
    <string name="groupon_info">团购信息</string>
    <string name="my_favourite">我的收藏</string>
    <string name="groupon_around">周边团购</string>
    <string name="utility_list">实用工具</string>
    <string name="search_hint">团购搜索</string>
    <string name="search">搜索</string>
    <string name="select_city">切换城市</string>
    <string name="local_cate">本地美食</string>
    <string name="travel_hotel">旅游酒店</string>
    <string name="online_shopping">网上购物</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="beauty_healthy">美容保健</string>
    <string name="others">其他</string>
    <string name="no_groupon_item">找不到请求的信息</string>
    
    <string name="hide_pic">隐藏图片</string>
    <string name="show_pic">显示图片</string>
    
    <string name="province_list">省份列表</string>
    <string name="discount_symbol">折</string>
    <string name="chinese_yuan_symbol">￥</string>
    <string name="loading">更多</string>
    <string name="allover">全国</string>
    
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
  	<string name="pull_to_refresh_release_label">松开可以刷新</string>
  	<string name="pull_to_refresh_refreshing_label">加载中...</string>
  	<string name="pull_to_refresh_tap_label">按下刷新</string>
  	
  	<string name="favorites">收藏</string>
  	<string name="share">分享</string>
  	<string name="address">地址</string>
  	<string name="purchase">购买</string>
  	<string name="chinese_yuan">元</string>
  	<string name="original_price">原价:</string>
    <string name="actual_price">现价:</string>
    <string name="provider">供应商:</string>
    <string name="people">人</string>
    <string name="expiry_by">离结束还有</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="less_than_one">不到一</string>
    <string name="groupon_expired">团购已结束</string>
    
    <string name="no_shop_address">抱歉，没有该客户地址信息。</string>
    <string name="prompt_call_shop">是否拨打该商户电话？</string>
    <string name="prompt_select_number">请选择要拨打的商户电话</string>
    
    <string name="microblog">微博</string>
    <string name="email">邮件</string>
    <string name="please_select_shared_by">请选择分享方式</string>
    
    <string name="address_safety_promise">烁米网仅转发团购信息，不会收集您提供的邮件地址。</string>
    <string name="recepients_list">收件人列表：</string>
    <string name="send">发送</string>
    <string name="add_email_address">新增收件人邮箱地址</string>
    <string name="add">添加</string>
    <string name="remove_email_address">从收件人列表中移除下面地址？</string>
    <string name="please_confirm">请确认</string>    
    <string name="email_sent_done">邮件已经成功发送</string>
    <string name="favorite_added_done">已经成功添加到收藏</string>
    
    <string name="no_favorites">未收藏任何团购产品</string>
    <string name="already_in_favorites">此团购产品已经被收藏</string>
    <string name="forward">转发</string>
    <string name="prompt_delete_favorite">是否删除选中的收藏？</string>
    
    <string name="weather_service">天气服务</string>
    <string name="express_query">快递查询</string>
    <string name="about_us">关于我们</string>
    
    <string name="about_provider">软件实现：烁米网</string>
    <string name="about_support">技术支持：stylelinkr@gmail.com</string>
    <string name="about_responsibility">所有团购信息均收集自第三方团购供应商，烁米网不对团购信息负法律责任</string>
    
    <string name="city_list">城市列表</string>
    <string name="county_list">区县列表</string>
    <string name="next_four_days_feature">未来4天天气预报</string>
    
    <string name="fog">雾</string>
    <string name="grey_day">阴</string>
    <string name="cloudy">多云</string>
    <string name="fine">晴</string>
    <string name="light_rain">小雨</string>
    <string name="middle_rain">中雨</string>
    <string name="heary_rain">大雨</string>
    <string name="thunder">雷</string>
    <string name="snow">雪</string>
    <string name="rain">雨</string>
    
    <string name="sunday">星期日</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    
    <string name="last_updated">最后更新：</string>
    
    <string name="select_express_company">选择快递公司：</string>
    <string name="please_input_express_no">请输入快递单号</string>
    <string name="complete">完成</string>
    <string name="query">查询</string>
    <string name="express_query_result">快递查询结果</string>
    
    <string name="refresh_location">刷新位置</string>
	<string name="network_error">网络连接错误，请检查配置后重试。</string>
	
	<string name="attention">注意</string>
    <string name="delete_all">是否要删除这条微博？</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>
    <string name="weibo_no_text">微博内容为空，请输入后发送！</string>
    <string name="change_account">更改帐号</string>
    
    <string name="invalid_bmap_key">不正确的授权键值</string>
    
</resources>
