<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content">
  	
  	<TextView 
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_marginTop="10dip"
  		android:layout_marginBottom="10dip"
  		android:layout_marginLeft="5dip"
  		android:layout_marginRight="5dip"
  		android:text="@string/about_provider"
  		android:textSize="18dip"
  		android:textStyle="bold"/>
  	
  	<TextView 
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_marginBottom="10dip"
  		android:layout_marginLeft="5dip"
  		android:layout_marginRight="5dip"
  		android:text="@string/about_support"
  		android:textSize="18dip"
  		android:textStyle="bold"/>
    
    <TextView 
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_marginBottom="10dip"
  		android:layout_marginLeft="5dip"
  		android:layout_marginRight="5dip"
  		android:text="@string/about_responsibility"
  		android:textSize="18dip"
  		android:textStyle="bold"/>
  		
</LinearLayout>
