<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="match_parent"
  	android:layout_height="match_parent"
  	android:weightSum="5">
    
    <TextView
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="5dip"
    	android:gravity="center"
    	android:textSize="12dip"
    	android:textColor="@color/black"
    	android:background="#dcdcdc"
    	android:text="@string/address_safety_promise"/>
    	
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:padding="5dip"
    	android:gravity="left"
    	android:layout_marginTop="20dip"
    	android:layout_marginLeft="20dip"
    	android:textSize="18dip"
    	android:text="@string/recepients_list"/>
    
    <EditText
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="25dip"
    	android:layout_marginRight="25dip"
    	android:hint="@string/add_email_address"
    	android:maxLines="1" />
    
    <ListView
    	android:id="@+id/list_address"
    	android:layout_width="match_parent"    	
    	android:layout_height="0dip"
    	android:layout_weight="4"
    	android:layout_marginLeft="25dip"
    	android:layout_marginRight="25dip"
    	android:background="@drawable/border_email_list"/>
    
    <Button
    	android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="15dip"
        android:paddingLeft="40dip"
        android:paddingRight="40dip"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:text="@string/send" 
        android:id="@+id/btn_send"        
        android:textSize="16dip"
        android:textColor="@color/black"
        android:background="@drawable/btn_grey_bg_selector"/>
    
</LinearLayout>
